# ogre-snake

./: .gitignore  CMakeLists.txt  README.md
VS2012/: Ogre-Snake.sln  Win32Project1.sdf
VS2012/_Ogre-Snake/: AdvancedOgreFramework.vcxproj  AdvancedOgreFramework.vcxproj.filters  Win32Project1.vcxproj  Win32Project1.vcxproj.filters
src/: BaseApplication.cpp  BaseApplication.h  BlockRenderer.cpp  BlockRenderer.h  SnakeApplication.cpp  SnakeApplication.h  main.cpp
src/config/: plugins.cfg.in  resources.cfg.in
src/controller/: Main.cpp  Main.h
src/model/: Block.cpp  Block.h  Map.cpp  Map.h  Snake.cpp  Snake.h
src/models/: Snake.cpp  Snake.h  SnakePart.cpp  SnakePart.h
src/view/: Main.cpp  Main.h
